cambio de nombre

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
             <ul>
                 
                 <li><a href="/">Descargador</a></li>
-                <li><a href="/background-remover">Removedor de Fondo</a></li>
+                <li><a href="/background-remover">Eliminador de Fondo</a></li>
                 <li><a href="/pdf-merger">Combinador de PDF</a></li>
             </ul>
         </nav>
@@ -70,6 +70,8 @@
 {% endblock %}
 
 <script>
+
+    <!-- Menu hambrguesa -->
     const menuToggle = document.querySelector(".menu-toggle");
     const navbar = document.querySelector(".navbar");
     const logo = document.querySelector("#logo");
